<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure Message</string>
    <string name="action_settings">Settings</string>
	<string name="sm">Secure Message</string>
    <string name="nama">Dedy Setiawan</string>
    <string name="sekolah">STIKOM CKI</string>
    <string name="nim">1101110059</string>
    <string name="versi">Ver 1.0.0</string>
    <string name="tahun">2015</string>
    <string name="nmrtlp">Phone Number</string>
    <string name="key">key</string>
    <string name="pesan">Message</string>
    <string name="hasil">Hasil</string>
    <string name="kirim">Send</string>
    <string name="jarak">isi nomor 1 sampai 256</string>
    <string name="menu">menu</string>
    <string name="penjelasan">Penjelasan</string>
    <string name="bantuan">Bantuan</string>
    <string name="back">Back</string>
    <string name="go">Go</string>
    <string name="teruskan">Teruskan</string>
    <string name="hapuspesan">hapus</string>
</resources>
