<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/root_menu"
        android:icon="@drawable/ic_overflow"
        android:title="@string/menu"
        android:showAsAction="always">
  	<menu>
		    <item 
		        android:id="@+id/Penjelasan" 
		        android:title="@string/penjelasan" 
		        android:icon="@drawable/ic_penjelasan"
		        android:showAsAction="always">
		    </item>
		    <item 
		        android:id="@+id/bantuan" 
		        android:title="@string/bantuan" 
		        android:showAsAction="always" 
		        android:icon="@drawable/ic_bantuan">
		    </item>
</menu>
</item>
</menu>
