<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background" 
  
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            >

             <TableLayout
                 android:id="@+id/tableLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nmrtlp"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <RelativeLayout
                     android:id="@+id/relativeLayout1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <EditText
                         android:id="@+id/NoTujuan"
                         android:layout_width="216dp"
                         android:layout_height="wrap_content"
                         android:inputType="phone" >

                         <requestFocus />
                     </EditText>

                     <Button
                        android:id="@+id/contact"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
            			android:layout_marginRight="30dp"
                        android:background="@drawable/contact" />

                 </RelativeLayout>

                 
             </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/kunci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/jarak"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
               android:orientation="vertical" >

    <EditText
        android:id="@+id/pesan"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

</LinearLayout>
</ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    	<Button
        	android:id="@+id/enkrip_button"
        	android:layout_width="50dp"
        	android:layout_height="50dp"
        	android:layout_alignParentTop="true"
        	android:layout_centerHorizontal="true"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/encrypt" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

    		<EditText
    		    android:id="@+id/sandi"
    		    android:layout_width="match_parent"
    		    android:layout_height="80dp"
    		    android:inputType="textMultiLine"
    		    android:scrollbarStyle="insideOverlay"
    		    android:scrollbars="vertical" />

		</LinearLayout>
	</ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/kirim"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="74dp"
            android:background="@drawable/send" />

        <Button
            android:id="@+id/reset"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="62dp"
            android:background="@drawable/reset" />

    </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>

   
</LinearLayout>